fix: overlapping in container (#36)

--- a/react-cra/src/index.css
+++ b/react-cra/src/index.css
@@ -31,7 +31,8 @@ body,
 
 .container {
     display: flex;
-
+    padding-top: 64px;
+    position: relative;
 }
 
 main {
